keep only leetcode