@@ -1,6 +1,7 @@
 package org.gd.leetcode.p0015;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,7 +10,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -25,23 +26,25 @@ class SolutionTest {
         return Stream.of(
                 Arguments.of(
                         new int[]{-1, 0, 1, 2, -1, -4},
-                        List.of(
-                                List.of(-1, 0, 1),
-                                List.of(-1, -1, 2)
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(-1, 0, 1),
+                                java.util.Arrays.asList(-1, -1, 2)
                         ))
         );
     }
 
     @ParameterizedTest
     @MethodSource("args")
-    @DisplayName("Solution")
+    @DisplayName("My Slow Solution")
+    @Timeout(value = 500, unit = TimeUnit.MILLISECONDS)
     void test_ThreeSum(int[] nums, List<List<Integer>> expected) {
-        assertEquals(expected, new Solution().threeSum(nums));
+        assertEquals(expected, new MySlowSolution().threeSum(nums));
     }
 
     @ParameterizedTest
     @MethodSource("args")
     @DisplayName("Fastest Solution")
+    @Timeout(value = 500, unit = TimeUnit.MILLISECONDS)
     void test_Name(int[] nums, List<List<Integer>> expected) {
         assertEquals(expected, new FastestSolution().threeSum(nums));
     }
