@@ -1,6 +1,8 @@
 package org.gd.leetcode.p0016;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -26,9 +28,9 @@ class SolutionTest {
         return Stream.of(
                 arguments(
                         new int[]{-1, 0, 1, 2, -1, -4},
-                        List.of(
-                                List.of(-1, 0, 1),
-                                List.of(-1, -1, 2)
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(-1, 0, 1),
+                                java.util.Arrays.asList(-1, -1, 2)
                         )
                 )
         );
