@@ -1,15 +1,15 @@
 package org.gd.leetcode.p0039;
 
-import org.junit.jupiter.api.*;
+import lombok.var;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @DisplayName("LeetCode #39: Combination Sum")
 class SolutionTest {
@@ -18,9 +18,9 @@ class SolutionTest {
         return Stream.of(
                 Arguments.of(
                         new int[]{2, 3, 6, 7}, 7,
-                        List.of(
-                                List.of(2, 2, 3),
-                                List.of(7))
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(2, 2, 3),
+                                java.util.Arrays.asList(7))
                 )
         );
     }
