@@ -1,6 +1,8 @@
 package org.gd.leetcode.p0046;
 
-import org.junit.jupiter.api.*;
+import lombok.var;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -10,7 +12,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -24,18 +26,18 @@ class SolutionTest {
     private static Stream<Arguments> args() {
         return Stream.of(
 
-                Arguments.of(new int[]{1, 2}, List.of(
-                        List.of(1, 2),
-                        List.of(2, 1)
+                Arguments.of(new int[]{1, 2}, java.util.Arrays.asList(
+                        java.util.Arrays.asList(1, 2),
+                        java.util.Arrays.asList(2, 1)
                 )),
 
-                Arguments.of(new int[]{1, 2, 3}, List.of(
-                        List.of(1, 2, 3),
-                        List.of(1, 3, 2),
-                        List.of(2, 1, 3),
-                        List.of(2, 3, 1),
-                        List.of(3, 1, 2),
-                        List.of(3, 2, 1)
+                Arguments.of(new int[]{1, 2, 3}, java.util.Arrays.asList(
+                        java.util.Arrays.asList(1, 2, 3),
+                        java.util.Arrays.asList(1, 3, 2),
+                        java.util.Arrays.asList(2, 1, 3),
+                        java.util.Arrays.asList(2, 3, 1),
+                        java.util.Arrays.asList(3, 1, 2),
+                        java.util.Arrays.asList(3, 2, 1)
                 ))
         );
     }
