@@ -1,6 +1,6 @@
 package org.gd.leetcode.p0051;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,7 +9,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -24,14 +24,14 @@ class SolutionTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                Arguments.of(4, List.of(
-                        List.of(
+                Arguments.of(4, java.util.Arrays.asList(
+                        java.util.Arrays.asList(
                                 ".Q..",
                                 "...Q",
                                 "Q...",
                                 "..Q."
                         ),
-                        List.of(
+                        java.util.Arrays.asList(
                                 "..Q.",
                                 "Q...",
                                 "...Q",
