@@ -1,15 +1,16 @@
 package org.gd.leetcode.p0054;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.params.provider.Arguments.arguments;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution};
@@ -32,7 +33,7 @@ class SolutionTest {
                                 {10, 11, 12},
                                 {13, 14, 15},
                         },
-                        List.of(1, 2, 3, 6, 9, 12, 15, 14, 13, 10, 7, 4, 5, 8, 11)),
+                        Arrays.asList(1, 2, 3, 6, 9, 12, 15, 14, 13, 10, 7, 4, 5, 8, 11)),
 
                 Arguments.of(
                         new int[][]{
@@ -47,7 +48,7 @@ class SolutionTest {
                                 {9, 19},
                                 {10, 20}
                         },
-                        List.of(1, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 10, 9, 8, 7, 6, 5, 4, 3, 2)),
+                        Arrays.asList(1, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 10, 9, 8, 7, 6, 5, 4, 3, 2)),
 
                 Arguments.of(
                         new int[][]{
@@ -55,7 +56,7 @@ class SolutionTest {
                                 {4, 5, 6},
                                 {7, 8, 9}
                         },
-                        List.of(1, 2, 3, 6, 9, 8, 7, 4, 5)),
+                        Arrays.asList(1, 2, 3, 6, 9, 8, 7, 4, 5)),
 
                 Arguments.of(
                         new int[][]{
@@ -63,7 +64,7 @@ class SolutionTest {
                                 {5, 6, 7, 8},
                                 {9, 10, 11, 12}
                         },
-                        List.of(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7)),
+                        Arrays.asList(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7)),
 
                 Arguments.of(
                         new int[][]{
@@ -72,7 +73,7 @@ class SolutionTest {
                                 {9, 10, 11, 12},
                                 {13, 14, 15, 16}
                         },
-                        List.of(1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10))
+                        Arrays.asList(1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10))
         );
     }
 
