@@ -1,7 +1,8 @@
 package org.gd.leetcode.p0102;
 
+import lombok.var;
 import org.gd.leetcode.common.TreeNode;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,7 +10,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -24,10 +25,10 @@ class SolutionTest {
         return Stream.of(
                 Arguments.of(
                         TreeNode.of(3, 9, 20, null, null, 15, 7),
-                        List.of(
-                                List.of(3),
-                                List.of(9, 20),
-                                List.of(15, 7)
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(3),
+                                java.util.Arrays.asList(9, 20),
+                                java.util.Arrays.asList(15, 7)
                         ))
         );
     }
