@@ -1,7 +1,7 @@
 package org.gd.leetcode.p0107;
 
 import org.gd.leetcode.common.TreeNode;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,7 +9,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 /**
@@ -24,17 +24,17 @@ class SolutionTest {
         return Stream.of(
                 arguments(
                         TreeNode.of(3, 9, 20, null, null, 15, 7),
-                        List.of(
-                                List.of(15, 7),
-                                List.of(9, 20),
-                                List.of(3)
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(15, 7),
+                                java.util.Arrays.asList(9, 20),
+                                java.util.Arrays.asList(3)
                         )),
                 arguments(
                         TreeNode.of(1, 2, 3, 4, null, null, 5),
-                        List.of(
-                                List.of(4, 5),
-                                List.of(2, 3),
-                                List.of(1)
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(4, 5),
+                                java.util.Arrays.asList(2, 3),
+                                java.util.Arrays.asList(1)
                         ))
         );
     }
