@@ -1,7 +1,8 @@
 package org.gd.leetcode.p0113;
 
 import org.gd.leetcode.common.TreeNode;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -11,7 +12,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -38,9 +39,9 @@ class SolutionTest {
                 .build();
 
 
-        List<List<Integer>> expected0 = List.of(
-                List.of(5, 8, 4, 5),
-                List.of(5, 4, 11, 2)
+        List<List<Integer>> expected0 = java.util.Arrays.asList(
+                java.util.Arrays.asList(5, 8, 4, 5),
+                java.util.Arrays.asList(5, 4, 11, 2)
         );
 
 
