@@ -1,6 +1,6 @@
 package org.gd.leetcode.p0118;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -8,7 +8,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -23,40 +23,40 @@ class SolutionTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                Arguments.arguments(1, List.of(
-                        /* 0 */ List.of(1)
+                Arguments.arguments(1, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1)
                 )),
-                Arguments.arguments(2, List.of(
-                        /* 0 */ List.of(1),
-                        /* 1 */ List.of(1, 1)
+                Arguments.arguments(2, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1),
+                        /* 1 */ java.util.Arrays.asList(1, 1)
                 )),
-                Arguments.arguments(3, List.of(
-                        /* 0 */ List.of(1),
-                        /* 1 */ List.of(1, 1),
-                        /* 2 */ List.of(1, 2, 1)
+                Arguments.arguments(3, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1),
+                        /* 1 */ java.util.Arrays.asList(1, 1),
+                        /* 2 */ java.util.Arrays.asList(1, 2, 1)
                 )),
-                Arguments.arguments(4, List.of(
-                        /* 0 */ List.of(1),
-                        /* 1 */ List.of(1, 1),
-                        /* 2 */ List.of(1, 2, 1),
-                        /* 3 */ List.of(1, 3, 3, 1)
+                Arguments.arguments(4, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1),
+                        /* 1 */ java.util.Arrays.asList(1, 1),
+                        /* 2 */ java.util.Arrays.asList(1, 2, 1),
+                        /* 3 */ java.util.Arrays.asList(1, 3, 3, 1)
                 )),
-                Arguments.arguments(5, List.of(
-                        /* 0 */ List.of(1),
-                        /* 1 */ List.of(1, 1),
-                        /* 2 */ List.of(1, 2, 1),
-                        /* 3 */ List.of(1, 3, 3, 1),
-                        /* 4 */ List.of(1, 4, 6, 4, 1)
+                Arguments.arguments(5, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1),
+                        /* 1 */ java.util.Arrays.asList(1, 1),
+                        /* 2 */ java.util.Arrays.asList(1, 2, 1),
+                        /* 3 */ java.util.Arrays.asList(1, 3, 3, 1),
+                        /* 4 */ java.util.Arrays.asList(1, 4, 6, 4, 1)
                 )),
-                Arguments.arguments(8, List.of(
-                        /* 0 */ List.of(1),
-                        /* 1 */ List.of(1, 1),
-                        /* 2 */ List.of(1, 2, 1),
-                        /* 3 */ List.of(1, 3, 3, 1),
-                        /* 4 */ List.of(1, 4, 6, 4, 1),
-                        /* 5 */ List.of(1, 5, 10, 10, 5, 1),
-                        /* 6 */ List.of(1, 6, 15, 20, 15, 6, 1),
-                        /* 7 */ List.of(1, 7, 21, 35, 35, 21, 7, 1)
+                Arguments.arguments(8, java.util.Arrays.asList(
+                        /* 0 */ java.util.Arrays.asList(1),
+                        /* 1 */ java.util.Arrays.asList(1, 1),
+                        /* 2 */ java.util.Arrays.asList(1, 2, 1),
+                        /* 3 */ java.util.Arrays.asList(1, 3, 3, 1),
+                        /* 4 */ java.util.Arrays.asList(1, 4, 6, 4, 1),
+                        /* 5 */ java.util.Arrays.asList(1, 5, 10, 10, 5, 1),
+                        /* 6 */ java.util.Arrays.asList(1, 6, 15, 20, 15, 6, 1),
+                        /* 7 */ java.util.Arrays.asList(1, 7, 21, 35, 35, 21, 7, 1)
                 ))
         );
     }
