@@ -1,14 +1,16 @@
 package org.gd.leetcode.p0139;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -26,21 +28,21 @@ class SolutionTest {
         return Stream.of(
                 Arguments.of(
                         "pineapplepenapple",
-                        List.of("apple", "pen", "applepen", "pine", "pineapple"),
+                        Arrays.asList("apple", "pen", "applepen", "pine", "pineapple"),
                         true),
-                Arguments.of("catsandog", List.of("cats", "dog", "sand", "and", "cat"), false),
-                Arguments.of("applepenapple", List.of("apple", "pen"), true),
-                Arguments.of("leetcode", List.of("leet", "code"), true),
-                Arguments.of("abcd", List.of("a", "abc", "b", "cd"), true),
-                Arguments.of("dogs", List.of("dog","s","gs"), true),
-                Arguments.of("aaaaaa", List.of("aaaa", "aaa"), true),
-                Arguments.of("bb", List.of("b", "a", "bbb", "bbbb"), true),
+                Arguments.of("catsandog", Arrays.asList("cats", "dog", "sand", "and", "cat"), false),
+                Arguments.of("applepenapple", Arrays.asList("apple", "pen"), true),
+                Arguments.of("leetcode", Arrays.asList("leet", "code"), true),
+                Arguments.of("abcd", Arrays.asList("a", "abc", "b", "cd"), true),
+                Arguments.of("dogs", Arrays.asList("dog","s","gs"), true),
+                Arguments.of("aaaaaa", Arrays.asList("aaaa", "aaa"), true),
+                Arguments.of("bb", Arrays.asList("b", "a", "bbb", "bbbb"), true),
                 Arguments.of(
                         "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab",
-                        List.of("a", "aa", "aaa", "aaaa", "aaaaa", "aaaaaa", "aaaaaaa", "aaaaaaaa", "aaaaaaaaa", "aaaaaaaaaa"),
+                        Arrays.asList("a", "aa", "aaa", "aaaa", "aaaaa", "aaaaaa", "aaaaaaa", "aaaaaaaa", "aaaaaaaaa", "aaaaaaaaaa"),
                         false
                 ),
-                Arguments.of("aaaaaaa", List.of("aaaa", "aa"), false)
+                Arguments.of("aaaaaaa", Arrays.asList("aaaa", "aa"), false)
         );
     }
 
