@@ -1,14 +1,16 @@
 package org.gd.leetcode.p0140;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @see org.gd.leetcode.p0139.SolutionTest
@@ -21,17 +23,17 @@ class SolutionTest {
     private static Stream<Arguments> args() {
         return Stream.of(
                 Arguments.of(
-                        "catsandog", List.of("cats", "dog", "sand", "and", "cat"), List.of()
+                        "catsandog", Arrays.asList("cats", "dog", "sand", "and", "cat"), Arrays.asList()
                 ),
                 Arguments.of(
                         "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
-                        List.of("a","aa","aaa","aaaa","aaaaa","aaaaaa","aaaaaaa","aaaaaaaa","aaaaaaaaa","aaaaaaaaaa"),
-                        List.of()
+                        Arrays.asList("a","aa","aaa","aaaa","aaaaa","aaaaaa","aaaaaaa","aaaaaaaa","aaaaaaaaa","aaaaaaaaaa"),
+                        Arrays.asList()
                 ),
                 Arguments.of(
                         "pineapplepenapple",
-                        List.of("apple", "pen", "applepen", "pine", "pineapple"),
-                        List.of(
+                        Arrays.asList("apple", "pen", "applepen", "pine", "pineapple"),
+                        Arrays.asList(
                                 "pine apple pen apple",
                                 "pineapple pen apple",
                                 "pine applepen apple"
