@@ -1,6 +1,6 @@
 package org.gd.leetcode.p0303;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -11,7 +11,7 @@ import java.util.List;
 import java.util.stream.Stream;
 
 import static java.util.Objects.requireNonNull;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link NumArray}
@@ -25,7 +25,7 @@ class NumArrayTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                new Case(new int[]{-2, 0, 3, -5, 2, -1}, List.of(
+                new Case(new int[]{-2, 0, 3, -5, 2, -1}, java.util.Arrays.asList(
                         new SubCase(0, 2, 1),
                         new SubCase(-1, 2, 1),
                         new SubCase(0, 0, -2),
