@@ -1,10 +1,8 @@
 package org.gd.leetcode.p0386;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Test;
 
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class SolutionTest {
 
@@ -16,12 +14,12 @@ class SolutionTest {
         );
 
         assertEquals(
-                List.of(1, 10, 11, 12, 13, 2, 3, 4, 5, 6, 7, 8, 9),
+                java.util.Arrays.asList(1, 10, 11, 12, 13, 2, 3, 4, 5, 6, 7, 8, 9),
                 new Solution().lexicalOrder(13)
         );
 
         assertEquals(
-                List.of(1, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 2, 20, 3, 4, 5, 6, 7, 8, 9),
+                java.util.Arrays.asList(1, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 2, 20, 3, 4, 5, 6, 7, 8, 9),
                 new Solution().lexicalOrder(20)
         );
     }
