@@ -1,6 +1,6 @@
 package org.gd.leetcode.p0442;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,8 +9,8 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.gd.common.ArrayUtils.copy;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.gd.leetcode.common.ArrayUtils.copy;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -23,7 +23,7 @@ class SolutionTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                Arguments.of(new int[]{4, 3, 2, 7, 8, 2, 3, 1}, List.of(2, 3))
+                Arguments.of(new int[]{4, 3, 2, 7, 8, 2, 3, 1}, java.util.Arrays.asList(2, 3))
         );
     }
 
