@@ -1,6 +1,7 @@
 package org.gd.leetcode.p0989;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,7 +10,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -25,7 +26,7 @@ class SolutionTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                Arguments.of(new int[]{1, 2, 0, 0}, 34, List.of(1, 2, 3, 4))
+                Arguments.of(new int[]{1, 2, 0, 0}, 34, java.util.Arrays.asList(1, 2, 3, 4))
         );
     }
 
