@@ -1,15 +1,17 @@
 package org.gd.leetcode.p1002;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -22,9 +24,9 @@ class SolutionTest {
 
     private static Stream<Arguments> args() {
         return Stream.of(
-                Arguments.of(new String[]{"cool", "lock", "cook"}, List.of("c", "o")),
-                Arguments.of(new String[]{"cool", "lock", "cook", "co"}, List.of("c", "o")),
-                Arguments.of(new String[]{"bella", "label", "roller"}, List.of("e", "l", "l"))
+                Arguments.of(new String[]{"cool", "lock", "cook"}, Arrays.asList("c", "o")),
+                Arguments.of(new String[]{"cool", "lock", "cook", "co"}, Arrays.asList("c", "o")),
+                Arguments.of(new String[]{"bella", "label", "roller"}, Arrays.asList("e", "l", "l"))
         );
     }
 
