@@ -1,6 +1,8 @@
 package org.gd.leetcode.p1253;
 
-import org.junit.jupiter.api.*;
+import lombok.var;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -10,7 +12,7 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Test for {@link Solution}
@@ -25,18 +27,18 @@ class SolutionTest {
     private static Stream<Arguments> args() {
         return Stream.of(
 
-                Arguments.of(2, 3, new int[]{2, 2, 1, 1}, Set.of(List.of())),
+                Arguments.of(2, 3, new int[]{2, 2, 1, 1}, org.gd.leetcode.common.CollectionUtils.setOf(java.util.Arrays.asList())),
 
-                Arguments.of(2, 1, new int[]{1, 1, 1}, Set.of(
-                        List.of(
-                                List.of(1, 1, 0),
-                                List.of(0, 0, 1)),
-                        List.of(
-                                List.of(1, 0, 1),
-                                List.of(0, 1, 0)),
-                        List.of(
-                                List.of(0, 1, 1),
-                                List.of(1, 0, 0))
+                Arguments.of(2, 1, new int[]{1, 1, 1}, org.gd.leetcode.common.CollectionUtils.setOf(
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(1, 1, 0),
+                                java.util.Arrays.asList(0, 0, 1)),
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(1, 0, 1),
+                                java.util.Arrays.asList(0, 1, 0)),
+                        java.util.Arrays.asList(
+                                java.util.Arrays.asList(0, 1, 1),
+                                java.util.Arrays.asList(1, 0, 0))
                 ))
         );
     }
