@@ -1,6 +1,7 @@
 package org.gd.leetcode.p1424;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -9,8 +10,8 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-import static org.gd.common.CollectionUtils.listOf;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.gd.leetcode.common.CollectionUtils.listOf;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Test for {@link Solution}
@@ -24,11 +25,11 @@ class SolutionTest {
     private static Stream<Arguments> args() {
         return Stream.of(
 
-                Arguments.of(List.of(
-                        List.of(1, 2, 3),
-                        List.of(4, 5, 6),
-                        List.of(7, 8, 9)
-                ), List.of(1, 4, 2, 7, 5, 3, 8, 6, 9))
+                Arguments.of(java.util.Arrays.asList(
+                        java.util.Arrays.asList(1, 2, 3),
+                        java.util.Arrays.asList(4, 5, 6),
+                        java.util.Arrays.asList(7, 8, 9)
+                ), java.util.Arrays.asList(1, 4, 2, 7, 5, 3, 8, 6, 9))
         );
     }
 
